--- a/Spring-03-Core-DI/pom.xml
+++ b/Spring-03-Core-DI/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Spring-02-Core-Wiring</artifactId>
+    <artifactId>Spring-03-Core-DI</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
