--- a/Spring-06-SpringBoot-Demo/pom.xml
+++ b/Spring-06-SpringBoot-Demo/pom.xml
@@ -42,7 +42,11 @@
 			<version>1.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
