--- a/Spring-10-ORM-TableCreation/src/main/resources/application.properties
+++ b/Spring-10-ORM-TableCreation/src/main/resources/application.properties
@@ -1,1 +1,28 @@
-spring.application.name=Spring-10-ORM-TableCreation
+#H2 Connection
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+#
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#
+#spring.jpa.show-sql=true
+#spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+
+
+#PostgreSQL Connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/base
+spring.datasource.username=postgres
+spring.datasource.password=mng2214art
+
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.defer-datasource-initialization=true
+
+
+
+
