--- a/Spring-10-ORM-TableCreation/src/main/resources/application.properties
+++ b/Spring-10-ORM-TableCreation/src/main/resources/application.properties
@@ -19,9 +19,14 @@ spring.datasource.password=mng2214art
 
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.sql.init.mode=always
+
+
+spring.sql.init.mode=always
+
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.defer-datasource-initialization=true
+
+spring.jpa.defer-datasource-initialization=true
 
 
 
