--- a/Spring-10-ORM-TableCreation/src/main/resources/application.properties
+++ b/Spring-10-ORM-TableCreation/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=create
