queries module added

--- a/Spring-14-ORM-Queries/src/main/resources/application.properties
+++ b/Spring-14-ORM-Queries/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Spring-14-ORM-Queries
+spring.datasource.url=jdbc:postgresql://localhost:5432/base
+spring.datasource.username=postgres
+spring.datasource.password=mng2214art
+
+spring.jpa.show-sql=true
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=create
