queries classes built

--- a/Spring-14-ORM-Queries/src/main/resources/application.properties
+++ b/Spring-14-ORM-Queries/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/base
 spring.datasource.username=postgres
 spring.datasource.password=mng2214art
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
