--- a/Spring-13-ORM-CinemaLab/src/main/resources/application.properties
+++ b/Spring-13-ORM-CinemaLab/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/base
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
 spring.datasource.username=postgres
 spring.datasource.password=mng2214art
 
