db connection is added

--- a/Spring-17-REST-Consuming-APIs/src/main/resources/application.properties
+++ b/Spring-17-REST-Consuming-APIs/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Spring-17-REST-Consuming-APIs
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/base
+spring.datasource.username=postgres
+spring.datasource.password=mng2214art
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
