--- a/Spring-18-REST-OpenApi3/src/main/resources/application.properties
+++ b/Spring-18-REST-OpenApi3/src/main/resources/application.properties
@@ -1,11 +1,19 @@
-spring.application.name=Spring-16-REST-Jackson
+spring.application.name=Spring-18-REST-OpenApi3
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/base
 spring.datasource.username=postgres
 spring.datasource.password=mng2214art
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.defer-datasource-initialization=true
+
 spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
+spring.jackson.serialization.fail-on-empty-beans=false
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-custom.html
