--- a/Spring-19-REST-Security-Keycloak-OrganizationsApp/src/main/resources/application.properties
+++ b/Spring-19-REST-Security-Keycloak-OrganizationsApp/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.defer-datasource-initialization=true
 
 spring.jackson.serialization.fail-on-empty-beans=false
 
-keycloak.realm=Artur-dev
+keycloak.realm=artur-dev
 keycloak.auth-server-url=http://localhost:8080/auth
 keycloak.ssl-required=external
 keycloak.resource=training
