--- a/Spring-20-AOP/src/main/resources/application.properties
+++ b/Spring-20-AOP/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=mng2214art
 
 spring.jpa.show-sql=false
 
